--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.1.0",
-    "laravel/framework": "^6.0 || ^7.0 || ^8.0"
+    "laravel/framework": "^6.0 || ^7.0 || ^8.0 || ^9.0"
   },
   "autoload": {
     "psr-4": {
